# bee-rs

./: Cargo.toml  _temp.json  index.html  style.css
src/: components.rs  main.rs
src/components/: recipe.rs  recipe_card.rs  recipe_info.rs
