[package]
name = "bee-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.3"
gloo-net = "0.3.1"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.104"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
